<resources>
  <string name="app_name">PersonX</string>
  <string name="create_a_new_account">Create a new account</string>
  <string name="don_t_have_an_account">Don\'t have an account ?</string>
  <string name="login">Login</string>
  <string name="password">Password</string>
  <string name="email_or_phone">Email or Phone</string>
  <string name="sign_in_to_continue">Sign in to continue</string>
  <string name="welcome_back">Welcome</string>
  <string name="create_new_account">Create new Account</string>
  <string name="full_name">Full Name</string>
  <string name="email">Email</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="by_continuing_you_agree_with_our_term_and_conditions_and_privacy_policy">By continuing you agree with our Term and Conditions and Privacy Policy</string>
  <string name="sign_up">Sign Up</string>
  <string name="already_registered">Already Registered?</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  //Headings
  <string name="heading_one">Welcome to PersonX</string>
  <string name="heading_two">Instant Notifications</string>
  <string name="heading_three">Cashless Payment</string>
  <string name="heading_fourth">Pay Anywhere</string>

  //Description
  <string name="desc_one">Your better half, An assistant helps with time and daily management, of meetings, correspondence, and note-taking.</string>
  <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
  <string name="desc_three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
  <string name="desc_fourth">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
  <string name="forgot_password_click_here">Forgot Password</string>
  <string name="app_description">PersonX is a task management app to help you stay organized and manage your day-to-day.\n You can use PersonX to make shopping lists or task lists, take notes, record collections, plan an event, or set reminders to increase your productivity and focus on what matters to you.\n PersonX makes it easy to stay organized and manage your life.\n\nPersonX’s modern, easy-to-use experience makes your lists unique, with customizable features like emoji in lists, colorful themes, dark mode, and more.</string>
  <string name="privacy1">PersonX is a free task manager, to-do list, planner, and reminder app to help you organize, plan, and accomplish any project. To give you the best possible experience, we collect and store some certain information that lets us tailor our services best. The transmission of the data is secured with HTTPS and we do our best to secure this data from any third party.</string>
  <string name="privacy2">We collect information to provide better services to all of our users. The information may be collected in the following ways:\n\n<b>Information you give us.</b> PersonX requires you to sign in with your E-mail Account. When you do, we’ll use personal information, like your name, or email address in order to better serve your needs and personalize your experience. <b>Analytics and Logs.</b> Analytics is a tool that let us collect more general information, like device model, OS version. We may also collect more detailed information like: details of how you used our service, such as your tasks and lists data. <b>Internet protocol address, Location data. device event information such as crashes, system activity, hardware settings, browser type, browser language, the date and time of your request and referral URL.</b> \n\n<b>Cookies.</b> We use cookies and other similar technologies in order to improve and personalize your experience.</string>
  <string name="tnc1">Below are our Terms of Service, which outline a lot of legal goodies, but the bottom line is it’s our aim to always take care of you, as a member of our community.\n\nYour access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users, and others who access or use the Service.</string>
  <string name="tnc2">PersonX respects Your privacy rights and recognizes the importance of protecting any information collected about You. Please read our Privacy Policy, the terms of which are incorporated herein, for more information about how we collect and use personal and non-personal data in relations to Our Products and Services.</string>

</resources>