<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LogInUserFrag">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/welcome_back"
                    android:textAlignment="center"
                    android:textColor="@color/Black"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/sign_in_to_continue"
                    android:textAlignment="center"
                    android:textColor="@color/Black"
                    android:textSize="16sp" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/login_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/progress_bar_layout"
                android:outlineAmbientShadowColor="@color/black"
                android:padding="25dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/login_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/loginMail"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/edittextbg"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/email_or_phone"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/loginPwd"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittextbg"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="8dp"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/forgot_password_click_here"
                        android:textColor="@color/Black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/verify_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="Verify Mail"
                        android:textColor="@color/Black"
                        android:textSize="12sp" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edittextbg"
                    android:backgroundTint="@color/purple_500"
                    android:enabled="false"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/Black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/create"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/create_a_new_account"
                        android:textColor="@color/Black"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
